--- a/src/main/resources/templates/register_page.html
+++ b/src/main/resources/templates/register_page.html
@@ -2,58 +2,27 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registr Page</title>
+    <title>Register Page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="form">
     <!--/*@thymesVar id="registerRequest" type=""*/-->
-    <form method="post" action="/register" th:object="${registerRequest}">
-    <div class="row">
-        <div class="col-lg-3 col-md-2">
-
-        </div>
-        <div class="col-lg-6 col-md-8 login-box">
-            <div class="col-lg-12 login-key">
-                <i class="fa fa-key" aria-hidden="true"></i>
-            </div>
-            <div class="col-lg-12 login-title">
-                REGISTR
-            </div>
-
-            <div class="col-lg-12 login-form">
-                <div class="col-lg-12 login-form">
-                    <form>
-                        <div class="form-group">
-                            <label class="form-control-label">USERNAME</label>
-                            <input type="text" name="login" placeholder="Login" required class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-control-label">E-MAIL</label>
-                            <input type="email" name="email" placeholder="Email" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-control-label">PASSWORD</label>
-                            <input type="password" name="password" placeholder="Password" required class="form-control" i>
-                        </div>
-
-                        <div class="col-lg-12 loginbttm">
-                            <div class="col-lg-6 login-btm login-text">
-                                <!-- Error Message -->
-                            </div>
-                            <div class="col-lg-6 login-btm login-button">
-                                <button type="submit" class="btn btn-outline-primary">REGISTR</button>
-                            </div>
-                        </div>
-                    </form>
-                    <a href="/">NAVIGATE TO MAIN PAGE</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-2">
-
-            </div>
-        </div>
-    </div>
+    <!--/*@thymesVar id="user" type=""*/-->
+    <form method="post" action="/register" th:object="${registerRequest}" th:object="${user}">
+        <form class="register-form">
+            <input type="text" name="login" required="true" placeholder="login"/>
+            <input type="email" name="email" placeholder="email"/>
+            <input type="password" name="password" required="true" placeholder="password" th:field="*{password}">
+            <ul class="text-danger" th:each="error: ${#fields.errors('password')}">
+                <li th:each="message : ${error.split(',')}">
+                    <p class="error-message" th:text="${message}"></p>
+                </li>
+            </ul>
+            <button>create</button>
+            <p class="message">Already registered? <a href="/login">Sign In</a></p>
+            <p class="message"><a href="/">Navigate to main page</a></p>
+        </form>
     </form>
 </div>
 </body>
